--- a/riverofgold.css
+++ b/riverofgold.css
@@ -2124,6 +2124,7 @@ body[data-rog_panel_details="2"] .rog_player_resource_line_customers {
 .rog_player_delivered_resizable .rog_player_delivered .rog_cards_delivered {
   display: flex;
   flex-flow: row;
+  flex-wrap: wrap;
   align-items: center;
   padding: 0px 5px;
 }
